--- a/Pages/FoodMng/Details.cshtml
+++ b/Pages/FoodMng/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Food.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Food.Category)
+            Category Name
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Food.Category.Id)
+            @Html.DisplayFor(model => model.Food.Category.Name)
         </dd>
     </dl>
 </div>
