--- a/Pages/FoodMng/Edit.cshtml
+++ b/Pages/FoodMng/Edit.cshtml
@@ -30,8 +30,8 @@
                 <span asp-validation-for="Food.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Food.CategoryId" class="control-label"></label>
-                <select asp-for="Food.CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <label class="control-label">Category Name</label>
+                <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
                 <span asp-validation-for="Food.CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
