Update Food and Category 14_10

--- a/Pages/FoodManager/Index.cshtml
+++ b/Pages/FoodManager/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model RestaurantManagement.Pages.FoodMng.IndexModel
+@model RestaurantManagement.Pages.FoodManager.IndexModel
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h2>List food</h2>
 
 <p>
     <a asp-page="Create">Create New Food</a>
@@ -45,4 +45,3 @@
         </tbody>
     </table>
 }
-
