--- a/Pages/category/Details.cshtml
+++ b/Pages/category/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantManagement.Pages.CategoryMng.DetailsModel
+@model RestaurantManagement.Pages.category.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
