--- a/Pages/FoodManager/Create.cshtml
+++ b/Pages/FoodManager/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model RestaurantManagement.Pages.FoodMng.EditModel
+@model RestaurantManagement.Pages.FoodManager.CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>Food</h4>
 <hr />
@@ -13,7 +13,6 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Food.Id" />
             <div class="form-group">
                 <label asp-for="Food.Name" class="control-label"></label>
                 <input asp-for="Food.Name" class="form-control" />
@@ -32,17 +31,16 @@
             <div class="form-group">
                 <label class="control-label">Category Name</label>
                 <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
-                <span asp-validation-for="Food.CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
