--- a/Pages/FoodManager/Details.cshtml
+++ b/Pages/FoodManager/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@page
-@model RestaurantManagement.Pages.FoodMng.DeleteModel
+@model RestaurantManagement.Pages.FoodManager.DetailsModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Food</h4>
     <hr />
@@ -31,16 +30,14 @@
             @Html.DisplayFor(model => model.Food.Price)
         </dd>
         <dt class="col-sm-2">
-            Category Name
+            @Html.DisplayNameFor(model => model.Food.Category)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Food.Category.Name)
         </dd>
     </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Food.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-page="./Edit" asp-route-id="@Model.Food?.Id">Edit</a> |
+    <a asp-page="./Index">Back to List</a>
 </div>
