--- a/Pages/FoodManager/Edit.cshtml
+++ b/Pages/FoodManager/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model RestaurantManagement.Pages.FoodMng.CreateModel
+@model RestaurantManagement.Pages.FoodManager.EditModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Food</h4>
 <hr />
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Food.Id" />
             <div class="form-group">
                 <label asp-for="Food.Name" class="control-label"></label>
                 <input asp-for="Food.Name" class="form-control" />
@@ -30,17 +31,18 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Category Name</label>
-                <select asp-for="Food.Category.Name" class ="form-control" asp-items="ViewBag.Name"></select>
+                <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
+                <span asp-validation-for="Food.Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
