--- a/Pages/category/Create.cshtml
+++ b/Pages/category/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model RestaurantManagement.Pages.CategoryMng.EditModel
+@model RestaurantManagement.Pages.category.CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>FoodCategory</h4>
 <hr />
@@ -13,7 +13,6 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="FoodCategory.Id" />
             <div class="form-group">
                 <label asp-for="FoodCategory.Name" class="control-label"></label>
                 <input asp-for="FoodCategory.Name" class="form-control" />
@@ -25,14 +24,14 @@
                 <span asp-validation-for="FoodCategory.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
