--- a/Pages/category/Delete.cshtml
+++ b/Pages/category/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantManagement.Pages.CategoryMng.DeleteModel
+@model RestaurantManagement.Pages.category.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,7 +7,6 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>FoodCategory</h4>
     <hr />
@@ -25,10 +24,22 @@
             @Html.DisplayFor(model => model.FoodCategory.Description)
         </dd>
     </dl>
-    
     <form method="post">
         <input type="hidden" asp-for="FoodCategory.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" id="btnDelete" onclick="return confirmDelete()"/> |
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
+@section Scripts {
+    <script>
+        function confirmDelete() {
+            if (confirm("Are you sure you want to delete this category?")) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+}
+
+
