--- a/Pages/Order/Success.cshtml
+++ b/Pages/Order/Success.cshtml
@@ -2,6 +2,9 @@
 @model RestaurantManagement.Pages.Order.SuccessModel
 @{
 }
+@{
+	Layout = "_MyLayout";
+}
 <h1>Order successfully</h1>
 <button onclick="showAlert()">Xem chi tiết</button>
 
