--- a/Pages/Order/Food.cshtml
+++ b/Pages/Order/Food.cshtml
@@ -2,7 +2,9 @@
 @model RestaurantManagement.Pages.Order.IndexModel
 @{
 }
-
+@{
+    Layout = "_MyLayout";
+}
 <style>
     body {
         font-family: Arial, sans-serif;
