--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,30 +8,36 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RestaurantManagement.styles.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand"   asp-page="/Index">RestaurantManagement</a>
+                <a class="navbar-brand" asp-page="/Index">RestaurantManagement</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  href="/foodmanager">Food Manager</a>
+                            <a class="nav-link text-dark" href="/foodmanager">Food Manager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  href="/combo">Combo Manager</a>
+                            <a class="nav-link text-dark" href="/combo">Combo Manager</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/category">Category Manager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"   href="/foodcombo">Food Combo Manager</a>
+                            <a class="nav-link text-dark" href="/foodcombo">Food Combo Manager</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/tableorder">Table Manager</a>
+                        </li>
+                       
                     </ul>
                 </div>
             </div>
