--- a/Pages/Combo/Create.cshtml
+++ b/Pages/Combo/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using RestaurantManagement.Models;
 @model RestaurantManagement.Pages.Combo.CreateModel
 
 @{
@@ -24,9 +25,14 @@
                 <span asp-validation-for="Combo.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Combo.Price" class="control-label"></label>
-                <input asp-for="Combo.Price" class="form-control" />
-                <span asp-validation-for="Combo.Price" class="text-danger"></span>
+                <label asp-for="Combo.FoodCombos" class="control-label"></label>
+                <select name="FoodCombos" class="form-control" multiple>
+                    @foreach(Food food in Model.GetAllFoods())
+                    {
+                        <option value="@food.Id">@food.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Combo.FoodCombos" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
