--- a/Pages/Combo/Create.cshtml
+++ b/Pages/Combo/Create.cshtml
@@ -32,7 +32,7 @@
                         <option value="@food.Id">@food.Name</option>
                     }
                 </select>
-                <span asp-validation-for="Combo.FoodCombos" class="text-danger"></span>
+                <span class="text-information">Hold ctrl to select multiple food</span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
