Send mail complete

--- a/Pages/Sendmail/Index.cshtml
+++ b/Pages/Sendmail/Index.cshtml
@@ -2,9 +2,9 @@
 @model RestaurantManagement.Pages.Sendmail.IndexModel
 @{
 }
-<form>
-    <input type="email"></input>
+<form method="post">
+    <input class="form-group" type="email" name="Email"></input>
 
-    <input type="submit" value="Sendmail"></input>
+    <input type="submit" value="Sendmail" class="btn-outline-light"></input>
 
 </form>
