--- a/Pages/FoodManager/Delete.cshtml
+++ b/Pages/FoodManager/Delete.cshtml
@@ -5,42 +5,42 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Food</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Food.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Food.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Food.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Food.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Food.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Food.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Food.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Food.Category.Name)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Food.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">ARE YOU SURE?</h2>
+        </div>
+    </div>
+    <hr />   
+    <div>
+        <table class="table">
+            <thead class="theadtable">
+                <tr>
+                    <th class="title">Name</th>
+                    <th class="title">Description</th>
+                    <th class="title">Price</th>
+                    <th class="title">Category</th>
+                    <th class="title">Settings</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>@Html.DisplayFor(model => model.Food.Name)</td>
+
+                <td>@Html.DisplayFor(model => model.Food.Description)</td>
+
+                <td>@Html.DisplayFor(model => model.Food.Price)</td>
+
+                <td>@Html.DisplayFor(model => model.Food.Category.Name)</td>
+                <td class="btncrud">
+                    <form method="post">
+                        <input type="hidden" asp-for="Food.Id" />
+                        <input type="submit" value="Delete" class="btndelete" />
+                        <a asp-page="./Index">Back to List</a>
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
+<link href="~/css/fooddelete.css" rel="stylesheet" />
