--- a/Pages/FoodManager/Edit.cshtml
+++ b/Pages/FoodManager/Edit.cshtml
@@ -4,47 +4,54 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Food</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Food.Id" />
-            <div class="form-group">
-                <label asp-for="Food.Name" class="control-label"></label>
-                <input asp-for="Food.Name" class="form-control" />
-                <span asp-validation-for="Food.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Food.Description" class="control-label"></label>
-                <input asp-for="Food.Description" class="form-control" />
-                <span asp-validation-for="Food.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Food.Price" class="control-label"></label>
-                <input asp-for="Food.Price" class="form-control" />
-                <span asp-validation-for="Food.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Category Name</label>
-                <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
-                <span asp-validation-for="Food.Category.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">EDIT FOODS</h2>
+        </div>
+    </div>>
+    <div class="row">
+        <div class="col-md">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Food.Id" />
+                <div class="form-group">
+                    <label asp-for="Food.Name" class="control-label"></label>
+                    <input asp-for="Food.Name" class="form-control" />
+                    <span asp-validation-for="Food.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Food.Description" class="control-label"></label>
+                    <input asp-for="Food.Description" class="form-control" />
+                    <span asp-validation-for="Food.Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Food.Price" class="control-label"></label>
+                    <input asp-for="Food.Price" class="form-control" />
+                    <span asp-validation-for="Food.Price" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Category Name</label>
+                    <select asp-for="Food.Category.Name" class="form-control" asp-items="ViewBag.Name"></select>
+                    <span asp-validation-for="Food.Category.Name" class="text-danger"></span>
+                </div>
+                <div class="btncrud">
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn" />
+                    </div>
+                    <div>
+                        <button type="button" class="btn" onclick="location.href='@Url.Page("Index")'">Back to List</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
+<link href="~/css/foodedit.css" rel="stylesheet" />
