--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,36 +11,45 @@
 
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-page="/Index">RestaurantManagement</a>
+    <header class="">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+            <div class="container headerWeb">
+                <div class="nameWeb">                  
+                    <div class ="name"><a class="navbar-brand ml-auto" asp-page="/Index">Restaurant</a></div>
+                </div>               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/foodmanager">Food Manager</a>
+                            <div class="textheader">
+                                <a class="nav-link" href="/foodmanager">Food Manager</a>
+                            </div>                           
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Combo/Index">Combo</a>
+                            <div class="textheader">
+                                <a class="nav-link" asp-area="" asp-page="/Combo/Index">Combo</a>
+                            </div>                           
                         </li>
- 
-                            <a class="nav-link text-dark" href="/category">Category Manager</a>
-                        </li>
-                      
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/tableorder">Table Manager</a>
+                            <div class="textheader">
+                                <a class="nav-link" href="/category">Category Manager</a>
+                            </div>                           
                         </li>
- 
+                        <li class="nav-item">
+                            <div class="textheader">
+                                <a class="nav-link" href="/tableorder">Table Manager</a>
+                            </div>                           
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <div class="imgHeader">
+            <img src="~/css/background.jpg" alt="Logo" class="logo-image">
+        </div>      
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -57,7 +66,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+<link href="~/css/header.css" rel="stylesheet" />
