update css Food and Category

--- a/Pages/FoodManager/Create.cshtml
+++ b/Pages/FoodManager/Create.cshtml
@@ -5,11 +5,10 @@
     ViewData["Title"] = "Create";
 }
 
-<hr />
 <div>
     <div class="menu">
         <div>
-            <h2 class="menutext">CREATE FOODS</h2>
+            <h2 class="menutext">CREATE FOOD</h2>
         </div>
     </div>
     <div class="row">
@@ -51,5 +50,6 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-<link href="~/css/foodcreate.css" rel="stylesheet" />
+
 <link href="~/css/buttoncustom.css" rel="stylesheet" />
+<link href="~/css/foodandcategory/create.css" rel="stylesheet" />
