--- a/Pages/FoodManager/Delete.cshtml
+++ b/Pages/FoodManager/Delete.cshtml
@@ -8,10 +8,9 @@
 <div>
     <div class="menu">
         <div>
-            <h2 class="menutext">ARE YOU SURE?</h2>
+            <h2 class="menutext">DELETE FOOD</h2>
         </div>
-    </div>
-    <hr />   
+    </div>  
     <div>
         <table class="table">
             <thead class="theadtable">
@@ -42,5 +41,4 @@
         </table>
     </div>
 </div>
-<link href="~/css/buttoncustom.css" rel="stylesheet" />
-<link href="~/css/fooddelete.css" rel="stylesheet" />
+<link href="~/css/foodandcategory/delete.css" rel="stylesheet" />
