--- a/Pages/FoodManager/Details.cshtml
+++ b/Pages/FoodManager/Details.cshtml
@@ -39,5 +39,5 @@
         </table>
     </div>
 </div>
-<link href="~/css/buttoncustom.css" rel="stylesheet" />
+<link href="~/css/foodandcategory/details.css" rel="stylesheet" />
 <link href="~/css/fooddetails.css" rel="stylesheet" />
