--- a/Pages/FoodManager/Index.cshtml
+++ b/Pages/FoodManager/Index.cshtml
@@ -60,5 +60,5 @@
         <button type="button" class="btn" onclick="location.href='@Url.Page("Create")'">Create New Food</button>
     </p>
 </div>
-<link href="~/css/foodindex.css" rel="stylesheet" />
+<link href="~/css/foodandcategory/index.css" rel="stylesheet" />
 <link href="~/css/buttoncustom.css" rel="stylesheet" />
