--- a/Pages/category/Index.cshtml
+++ b/Pages/category/Index.cshtml
@@ -5,42 +5,52 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FoodCategory[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FoodCategory[0].Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.FoodCategory) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="body">
+    <div class="menu">
+        <div>
+            <h2 class="menutext">MENU CATEGORIES</h2>
+        </div>
+    </div>
+    <table class="table">
+        <thead class="theadtable">
+            <tr>
+                <th class="title">
+                    @Html.DisplayNameFor(model => model.FoodCategory[0].Name)
+                </th>
+                <th class="title">
+                    @Html.DisplayNameFor(model => model.FoodCategory[0].Description)
+                </th>
+                <th class="title">
+                    Settings
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.FoodCategory)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td class="btncrud">
+                        <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> 
+                        <a asp-page="./Details" asp-route-id="@item.Id">Details</a> 
+                        <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <p>
+        <button type="button" class="btn" onclick="location.href='@Url.Page("Create")'">Create New Category</button>
+    </p>
+</div>
 @if (TempData["AlertMessage"] != null)
 {
     <div class="alert alert-danger">@TempData["AlertMessage"]</div>
 }
+<link href="~/css/foodandcategory/index.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
