--- a/Pages/FoodManager/Edit.cshtml
+++ b/Pages/FoodManager/Edit.cshtml
@@ -4,13 +4,12 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<hr />
 <div>
     <div class="menu">
         <div>
-            <h2 class="menutext">EDIT FOODS</h2>
+            <h2 class="menutext">EDIT FOOD</h2>
         </div>
-    </div>>
+    </div>
     <div class="row">
         <div class="col-md">
             <form method="post">
@@ -52,6 +51,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
+<link href="~/css/foodandcategory/edit.css" rel="stylesheet" />
 <link href="~/css/buttoncustom.css" rel="stylesheet" />
-<link href="~/css/foodedit.css" rel="stylesheet" />
