--- a/Pages/category/Delete.cshtml
+++ b/Pages/category/Delete.cshtml
@@ -5,41 +5,36 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <div>
-    <h4>FoodCategory</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodCategory.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodCategory.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodCategory.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodCategory.Description)
-        </dd>
-    </dl>
-    <form method="post">
-        <input type="hidden" asp-for="FoodCategory.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" id="btnDelete" onclick="return confirmDelete()"/> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">DELETE CATEGORY</h2>
+        </div>
+    </div>
+    <div>
+        <table class="table">
+            <thead class="theadtable">
+                <tr>
+                    <th class="title">Name</th>
+                    <th class="title">Description</th>
+                    <th class="title">Settings</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>@Html.DisplayFor(model => model.FoodCategory.Name)</td>
+
+                <td>@Html.DisplayFor(model => model.FoodCategory.Description)</td>
+                <td class="btncrud">
+                    <form method="post">
+                        <input type="hidden" asp-for="FoodCategory.Id" />
+                        <input type="submit" value="Delete" class="btndelete" />
+                        <a asp-page="./Index">Back to List</a>
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
-@section Scripts {
-    <script>
-        function confirmDelete() {
-            if (confirm("Are you sure you want to delete this category?")) {
-                return true;
-            } else {
-                return false;
-            }
-        }
-    </script>
-}
+<link href="~/css/foodandcategory/delete.css" rel="stylesheet" />
 
 
