--- a/Pages/category/Details.cshtml
+++ b/Pages/category/Details.cshtml
@@ -5,27 +5,32 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">CATEGORY DETAILS</h2>
+        </div>
+    </div>
+    <div>
+        <table class="table">
+            <thead class="theadtable">
+                <tr>
+                    <th class="title">Name</th>
+                    <th class="title">Description</th>
+                    <th class="title">Settings</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>@Html.DisplayFor(model => model.FoodCategory.Name)</td>
 
-<div>
-    <h4>FoodCategory</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodCategory.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodCategory.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodCategory.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodCategory.Description)
-        </dd>
-    </dl>
+                <td>@Html.DisplayFor(model => model.FoodCategory.Description)</td>
+                <td class="btncrud">
+                    <a asp-page="./Edit" asp-route-id="@Model.FoodCategory?.Id">Edit</a>
+                    <a asp-page="./Index">Back to List</a>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.FoodCategory?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+<link href="~/css/foodandcategory/details.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
