--- a/Pages/category/Edit.cshtml
+++ b/Pages/category/Edit.cshtml
@@ -5,36 +5,42 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>FoodCategory</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="FoodCategory.Id" />
-            <div class="form-group">
-                <label asp-for="FoodCategory.Name" class="control-label"></label>
-                <input asp-for="FoodCategory.Name" class="form-control" />
-                <span asp-validation-for="FoodCategory.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FoodCategory.Description" class="control-label"></label>
-                <input asp-for="FoodCategory.Description" class="form-control" />
-                <span asp-validation-for="FoodCategory.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">EDIT CATEGORY</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="FoodCategory.Id" />
+                <div class="form-group">
+                    <label asp-for="FoodCategory.Name" class="control-label"></label>
+                    <input asp-for="FoodCategory.Name" class="form-control" />
+                    <span asp-validation-for="FoodCategory.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FoodCategory.Description" class="control-label"></label>
+                    <input asp-for="FoodCategory.Description" class="form-control" />
+                    <span asp-validation-for="FoodCategory.Description" class="text-danger"></span>
+                </div>
+                <div class="btncrud">
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn" />
+                    </div>
+                    <div>
+                        <button type="button" class="btn" onclick="location.href='@Url.Page("Index")'">Back to List</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<link href="~/css/foodandcategory/edit.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
