--- a/Pages/Authentication/MailConfirm.cshtml
+++ b/Pages/Authentication/MailConfirm.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantManagement.Pages.Authentication.LoginModel
+@model RestaurantManagement.Pages.Authentication.MailComfirmModel
 @{
 }
 @{
@@ -7,9 +7,9 @@
 }
 
 
- 
+
 <head>
-  
+
     <style>
         body {
             background-color: #D4D4D4;
@@ -47,21 +47,16 @@
 </head>
 <body>
     <div class="login-form">
-        <h1>Login Restaurant App</h1>
+        <h1>Register</h1>
         <form method="post">
             <div class="form-group">
                 <label for="Email">Email:</label>
                 <input type="email" class="form-control" id="Email" name="Email" />
-            </div>
-            <div class="form-group">
-                <label for="Password">Password:</label>
-                <input type="password" class="form-control" id="Password" name="Password" />
-            </div>
-            <h1 style="color:red">@Model.message</h1>
-            <button href=""  class="btn btn-primary">Reset Password</button>
-            <button type="submit" class="btn btn-primary">Login</button>
+            </div> 
+            <h3 style="color:red">@Model.message</h3>
+            <button type="submit" class="btn btn-primary">Send OTP</button>
         </form>
     </div>
 </body>
- 
+
 
