--- a/Pages/Authentication/Register.cshtml
+++ b/Pages/Authentication/Register.cshtml
@@ -66,7 +66,8 @@
             </div>
             <div class="form-group">
                 <label for="Email">Email:</label>
-                <input type="email" class="form-control" id="Email" name="Email" />
+                <input type="email" class="form-control" id="Email"
+                       name="Email" value="@Model.email" readonly />
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
