--- a/Pages/Order/Food.cshtml
+++ b/Pages/Order/Food.cshtml
@@ -83,6 +83,7 @@
                             <li>
                                 <input type="checkbox" id="food-@f.Id" name="foodId[]" value="@f.Id">
                                 <label for="food-@f.Id"> @f.Name</label>
+                                <input type="number" name="number_food[]"  >
                             </li>
                         }
                     }
@@ -98,6 +99,7 @@
                     <li>
                         <input type="checkbox" id="combo-@com.Id" name="comboId[]" value="@com.Id">
                         <label for="combo-@com.Id">@com.Name</label>
+                        <input type="number" name="number_combo[]"  >
                     </li>
                 }
 
@@ -115,3 +117,27 @@
     </div>
     <input type="submit" value="Đặt món">
 </form>
+<script>
+    // Get all the checkboxes and corresponding quantity input fields
+    const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+    const quantityInputs = document.querySelectorAll('input[type="number"]');
+
+    // Function to update input field state
+    function updateInputState(index) {
+        if (checkboxes[index].checked) {
+            quantityInputs[index].disabled = false;
+        } else {
+            quantityInputs[index].disabled = true;
+        }
+    }
+
+    // Loop through the checkboxes and initialize the input states
+    checkboxes.forEach((checkbox, index) => {
+        updateInputState(index);
+
+        // Add an event listener to each checkbox
+        checkbox.addEventListener('change', function () {
+            updateInputState(index);
+        });
+    });
+</script>
