--- a/Pages/Order/ListOrderDetail.cshtml
+++ b/Pages/Order/ListOrderDetail.cshtml
@@ -1,16 +1,72 @@
 ﻿@page
 @model RestaurantManagement.Pages.Order.ListOrderDetailModel
-@{
-}
-@foreach (var c in Model.tableOrderCustomers){
-    foreach(var t in Model.tableOrders)
-    {
-        if(t.Id == c.TableOrderId)
-        {
-            <p>Floor: @t.Floor</p>
-            <p>Number: @t.Number</p>
-        }
+<style>
+    /* styles.css */
+    .order-detail {
+        border: 1px solid red;
+        margin-bottom: 20px;
+        padding: 10px;
     }
-    <p>Start: @c.Start</p>
-    <p>End: @c.End</p>
+
+        .order-detail p {
+            margin: 5px 0;
+        }
+
+    .food-name {
+        font-weight: bold;
+    }
+
+    .combo-name {
+        font-weight: bold;
+        color: #007bff; /* Blue color for combo names */
+    }
+
+</style>
+ 
+
+@foreach (var customer in Model.tableOrderCustomers)
+{
+    <div class="order-detail">
+        <p>Start: @customer.Start</p>
+        <p>End: @customer.End</p>
+
+        @foreach (var order in Model.tableOrders)
+        {
+            if (order.Id == customer.TableOrderId)
+            {
+                <p>Floor: @order.Floor</p>
+                <p>Number: @order.Number</p>
+            }
+        }
+
+        @foreach (var foodTable in customer.FoodTables)
+        {
+            if (customer.Id == foodTable.TableOrderCustomerId)
+            {
+                @if (foodTable.FoodId != null)
+                {
+                    @foreach (var food in Model.foods)
+                    {
+                        if (food.Id == foodTable.FoodId)
+                        {
+                            <p class="food-name">Món: @food.Name || Số Lượng : @foodTable.Number</p>
+                        }
+                    }
+
+                }
+
+                @if (foodTable.ComboId != 0)
+                {
+                    @foreach (var combo in Model.combos)
+                    {
+                        if (combo.Id == foodTable.ComboId)
+                        {
+                            <p class="combo-name">Combo Món: @combo.Name || Số Lượng : @foodTable.Number</p>
+                        }
+                    }
+                }
+            }
+        }
+    </div>
 }
+
