--- a/Pages/Order/ListOrderDetail.cshtml
+++ b/Pages/Order/ListOrderDetail.cshtml
@@ -26,47 +26,59 @@
 
 @foreach (var customer in Model.tableOrderCustomers)
 {
-    <div class="order-detail">
-        <p>Start: @customer.Start</p>
-        <p>End: @customer.End</p>
+    @if (customer.FoodTables.Count() != 0)
+    {
+        <div class="order-detail">
 
-        @foreach (var order in Model.tableOrders)
-        {
-            if (order.Id == customer.TableOrderId)
+
+            @if (customer.FoodTables.Count() != 0)
             {
-                <p>Floor: @order.Floor</p>
-                <p>Number: @order.Number</p>
-            }
-        }
+                <p>Start: @customer.Start</p>
+                <p>End: @customer.End</p>
 
-        @foreach (var foodTable in customer.FoodTables)
-        {
-            if (customer.Id == foodTable.TableOrderCustomerId)
-            {
-                @if (foodTable.FoodId != null)
+                @foreach (var order in Model.tableOrders)
                 {
-                    @foreach (var food in Model.foods)
+                    if (order.Id == customer.TableOrderId)
                     {
-                        if (food.Id == foodTable.FoodId)
-                        {
-                            <p class="food-name">Món: @food.Name || Số Lượng : @foodTable.Number</p>
-                        }
-                    }
-
-                }
-
-                @if (foodTable.ComboId != 0)
-                {
-                    @foreach (var combo in Model.combos)
-                    {
-                        if (combo.Id == foodTable.ComboId)
-                        {
-                            <p class="combo-name">Combo Món: @combo.Name || Số Lượng : @foodTable.Number</p>
-                        }
+                        <p>Floor: @order.Floor</p>
+                        <p>Number: @order.Number</p>
+                        break;
                     }
                 }
             }
-        }
-    </div>
+            @foreach (var foodTable in customer.FoodTables)
+            {
+                if (customer.Id == foodTable.TableOrderCustomerId)
+                {
+                    @if (foodTable.FoodId != null)
+                    {
+                        @foreach (var food in Model.foods)
+                        {
+                            if (food.Id == foodTable.FoodId)
+                            {
+                                <p class="food-name">Món: @food.Name || Số Lượng : @foodTable.Number</p>
+                            }
+                        }
+
+                    }
+
+                    @if (foodTable.ComboId != 0)
+                    {
+                        @foreach (var combo in Model.combos)
+                        {
+                            if (combo.Id == foodTable.ComboId)
+                            {
+                                <p class="combo-name">Combo Món: @combo.Name || Số Lượng : @foodTable.Number</p>
+                            }
+                        }
+                    }
+                }
+            }
+
+
+
+        </div>
+    }
+
 }
 
