--- a/Pages/FoodManager/Details.cshtml
+++ b/Pages/FoodManager/Details.cshtml
@@ -22,7 +22,7 @@
                     <th class="title">Settings</th>
                 </tr>
             </thead>
-                <tr>
+                <tr class="tbodyfood">
                     
                     <td>@Html.DisplayFor(model => model.Food.Name)</td>
                     
