--- a/Pages/TableOrder/Index.cshtml
+++ b/Pages/TableOrder/Index.cshtml
@@ -10,5 +10,8 @@
     <input name="floor" type="number" /><br />
     <p>Number</p>
     <input name="number" type="number" style="margin-bottom:20px"/><br />
-    <input type="submit" value="Create Table"/>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-danger" />
+    </div>
 </form>
+
