--- a/Pages/category/Index.cshtml
+++ b/Pages/category/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="body">
     <div class="menu">
         <div>
-            <h2 class="menutext">MENU CATEGORIES</h2>
+            <h2 class="menutext">MENU</h2>
         </div>
     </div>
     <table class="table">
@@ -25,7 +25,7 @@
                 </th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="tbodyfood">
             @foreach (var item in Model.FoodCategory)
             {
                 <tr>
