--- a/Pages/Combo/Delete.cshtml
+++ b/Pages/Combo/Delete.cshtml
@@ -5,36 +5,37 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Combo</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Combo.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Combo.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Combo.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Combo.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Combo.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Combo.Price)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Combo.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">DELETE COMBO</h2>
+        </div>
+    </div>
+    <div>
+        <table class="table">
+            <thead class="theadtable">
+                <tr>
+                    <th class="title">Name</th>
+                    <th class="title">Description</th>
+                    <th class="title">Price</th>
+                    <th class="title">Settings</th>
+                </tr>
+            </thead>
+            <tr class="tbodyfood">
+                <td>@Html.DisplayFor(model => model.Combo.Name)</td>
+
+                <td>@Html.DisplayFor(model => model.Combo.Description)</td>
+
+                <td>@Html.DisplayFor(model => model.Combo.Price)</td>            
+                <td class="btncrud">
+                    <form method="post">
+                        <input type="hidden" asp-for="Combo.Id" />
+                        <input type="submit" value="Delete" class="btndelete" /> 
+                        <a asp-page="./Index">Back to List</a>
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
+<link href="~/css/foodandcategory/delete.css" rel="stylesheet" />
