--- a/Pages/Combo/Details.cshtml
+++ b/Pages/Combo/Details.cshtml
@@ -5,49 +5,49 @@
 	ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
 <div>
-	<h4>Combo</h4>
-	<hr />
-	<dl class="row">
-		<dt class="col-sm-2">
-			@Html.DisplayNameFor(model => model.Combo.Name)
-		</dt>
-		<dd class="col-sm-10">
-			@Html.DisplayFor(model => model.Combo.Name)
-		</dd>
-		<dt class="col-sm-2">
-			@Html.DisplayNameFor(model => model.Combo.Description)
-		</dt>
-		<dd class="col-sm-10">
-			@Html.DisplayFor(model => model.Combo.Description)
-		</dd>
-		<dt class="col-sm-2">
-			@Html.DisplayNameFor(model => model.Combo.Price)
-		</dt>
-		<dd class="col-sm-10">
-			@Html.DisplayFor(model => model.Combo.Price)
-		</dd>
-	</dl>
+	<div class="menu">
+		<div>
+			<h2 class="menutext">COMBO DETAIL</h2>
+		</div>
+	</div>
 	<table class="table">
-		<thead>
+		<thead class="theadtable">
 			<tr>
-				<th>
-					@Html.DisplayNameFor(model => model.Food[0].Name)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Food[0].Description)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Food[0].Price)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Food[0].Category)
-				</th>
+				<th class="title">Name</th>
+				<th class="title">Description</th>
+				<th class="title">Price</th>
+				<th class="title">Settings</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tr class="tbodyfood">
+
+			<td>@Html.DisplayFor(model => model.Combo.Name)</td>
+
+			<td>@Html.DisplayFor(model => model.Combo.Description)</td>
+
+			<td>@Html.DisplayFor(model => model.Combo.Price)</td>
+
+			<td class="btncrud">
+				<a asp-page="./Edit" asp-route-id="@Model.Combo?.Id">Edit</a>
+				<a asp-page="./Index">Back to List</a>
+				<a id="showFoodTable" href="javascript:void(0)">Show list Foods</a>
+			</td>
+		</tr>
+	</table>
+	<div class="menu">
+	</div>
+	<table class="table" id="foodTable" style="display: none;">
+		<thead class="theadtable">
+			<tr>
+				<th class="title">Name</th>
+				<th class="title">Description</th>
+				<th class="title">Price</th>
+				<th class="title">Category</th>
+			</tr>
+		</thead>
+		<tbody class="tbodyfood">
 			@foreach (var item in Model.Food)
 			{
 				<tr>
@@ -69,7 +69,15 @@
 		</tbody>
 	</table>
 </div>
-<div>
-	<a asp-page="./Edit" asp-route-id="@Model.Combo?.Id">Edit</a> |
-	<a asp-page="./Index">Back to List</a>
-</div>
+<link href="~/css/foodandcategory/details.css" rel="stylesheet" />
+<link href="~/css/fooddetails.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+	$(document).ready(function () {
+		$("#showFoodTable").click(function () {
+			$("#foodTable").toggle(); // Hiển thị/ẩn bảng bên dưới khi nhấp vào nút "List Food"
+		});
+	});
+</script>
+
