--- a/Pages/Combo/Index.cshtml
+++ b/Pages/Combo/Index.cshtml
@@ -5,58 +5,58 @@
 	ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-	<a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-	<thead>
-		<tr>
-			<th>
-				@Html.DisplayNameFor(model => model.Combo[0].Name)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Combo[0].Description)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Combo[0].Price)
-			</th>
-			<th>
-				@Html.DisplayNameFor(model => model.Combo[0].FoodCombos)
-			</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (var item in Model.Combo)
-		{
+<div class="body">
+	<div class="menu">
+		<div>
+			<h2 class="menutext">MENU</h2>
+		</div>
+	</div>
+	<table class="table">
+		<thead class="theadtable">
 			<tr>
-				<td>
-					@Html.DisplayFor(modelItem => item.Name)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.Description)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.Price)
-				</td>
-				<td>
-					<select class="form-control" id="Food_List" name="Food List" readonly ="readonly">
-						<option>Foods</option>
-						@foreach(var food in Model.GetFoodsName(item.Id))
-						{
-							<option disabled>@food</option>
-						}
-					</select>
-				</td>
-
-				<td>
-					<a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-					<a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-					<a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-				</td>
+				<th class="title">Name</th>
+				<th class="title">Descipton</th>
+				<th class="title">Price</th>
+				<th class="title">FoodCombos</th>
+				<th class="title">Settings</th>
 			</tr>
-		}
-	</tbody>
-</table>
+		</thead>
+		<tbody class="tbodyfood">
+			@foreach (var item in Model.Combo)
+			{
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.Name)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Description)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Price)
+					</td>
+					<td>
+						<select class="form-control" id="Food_List" name="Food List" readonly="readonly">
+							<option>Click to display Foods</option>
+							@foreach (var food in Model.GetFoodsName(item.Id))
+							{
+								<option disabled>@food</option>
+							}
+						</select>
+					</td>
+
+					<td class="btncrud">
+						<a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> 
+						<a asp-page="./Details" asp-route-id="@item.Id">Details</a> 
+						<a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+	<p>
+		<button type="button" class="btn" onclick="location.href='@Url.Page("Create")'">Create New Combo</button>
+	</p>
+</div>
+<link href="~/css/foodandcategory/index.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
+
