--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,45 +11,47 @@
 
 </head>
 <body>
-    <header class="">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
-            <div class="container headerWeb">
-                <div class="nameWeb">                  
-                    <div class ="name"><a class="navbar-brand ml-auto" asp-page="/Index">Restaurant</a></div>
-                </div>               
+    <header class="header">
+        <div class="imgHeader">
+            <img src="~/css/background.jpg" alt="Logo" class="logo-image">
+        </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm">
+            <div class="container headerWeb">           
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 ulheader">
                         <li class="nav-item">
-                            <div class="textheader">
-                                <a class="nav-link" href="/foodmanager">Food Manager</a>
+                            <div class="btnheader">
+                                <a class="nav-link btndetails" asp-area="" asp-page="/foodmanager/Index">Food Manager</a>
                             </div>                           
                         </li>
                         <li class="nav-item">
-                            <div class="textheader">
-                                <a class="nav-link" asp-area="" asp-page="/Combo/Index">Combo</a>
+                            <div class="btnheader">
+                                <a class="nav-link btndetails" asp-area="" asp-page="/Combo/Index">Combo Manager</a>
                             </div>                           
                         </li>
                         <li class="nav-item">
-                            <div class="textheader">
-                                <a class="nav-link" href="/category">Category Manager</a>
+                            <div class="btnheader">
+                                <a class="nav-link btndetails" asp-area="" asp-page="/category/Index">Category Manager</a>
                             </div>                           
                         </li>
                         <li class="nav-item">
-                            <div class="textheader">
-                                <a class="nav-link" href="/tableorder">Table Manager</a>
+                            <div class="btnheader">
+                                <a class="nav-link btndetails" asp-area="" asp-page="/tableorder/ListTableOrder">Table Manager</a>
                             </div>                           
+                        </li>
+                        <li class="nav-item">
+                            <div class="btnheader">
+                                <a class="nav-link btnlogoutdetails" asp-area="" asp-page="/authentication/logout">Logout</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </div>
-        </nav>
-        <div class="imgHeader">
-            <img src="~/css/background.jpg" alt="Logo" class="logo-image">
-        </div>      
+        </nav>           
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -69,4 +71,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-<link href="~/css/header.css" rel="stylesheet" />
+<link href="~/css/Layout.css" rel="stylesheet" />
