--- a/Pages/TableOrder/ListTableOrder.cshtml
+++ b/Pages/TableOrder/ListTableOrder.cshtml
@@ -2,47 +2,43 @@
 @model RestaurantManagement.Pages.TableOrder.ListTableOrderModel
 @{
 }
-<style>
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-    }
 
-    td, th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-</style>
-<table id="tableOrders">
-   <thead>
-        <tr>
-            <th>Description</th>
-            <th>Floor</th>
-            <th>Number</th>
-            <th>Action</th>
-        </tr>
-   </thead>
-    <tbody>
-        @foreach (var item in Model.tableOrders)
-        {
+<div>
+    <div class="menu">
+        <div>
+            <h2 class="menutext">MENU</h2>
+        </div>
+    </div>
+    <table class="table" id="tableOrders">
+        <thead class="theadtable">
             <tr>
-                <td> @item.Description</td>
-                <td>@item.Floor</td>
-                <td>@item.Number</td>
-                <td><button onclick="deleteR(@item.Id)">Delete</button> <button onclick="update(@item.Id)">Update</button></td>
-                
+                <th class="title">Description</th>
+                <th class="title">Floor</th>
+                <th class="title">Number</th>
+                <th class="title">Settings</th>
             </tr>
+        </thead>
+        <tbody class="tbodyfood">
+            @foreach (var item in Model.tableOrders)
+            {
+                <tr>
+                    <td> @item.Description</td>
+                    <td>@item.Floor</td>
+                    <td>@item.Number</td>
+@*                     <td>
+                        <a href="#" asp-page="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a href="#" asp-page="Update" asp-route-id="@item.Id">Update</a>
+                    </td> *@
+                </tr>
 
-        }
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+</div>
 
+<p>
+    <button type="button" class="btn" onclick="location.href='@Url.Page("Index")'">Create New Table</button>
+</p>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
 <script>
     var connection = new signalR.HubConnectionBuilder().withUrl("/resHub").build();
@@ -63,6 +59,7 @@
                 <td><button onclick="deleteR(${item.id})">Delete</button></td>`;
             tableBody.appendChild(row);
         });
-    });
-            
+    });           
 </script>
+<link href="~/css/foodandcategory/index.css" rel="stylesheet" />
+<link href="~/css/buttoncustom.css" rel="stylesheet" />
