--- a/Pages/category/Details.cshtml
+++ b/Pages/category/Details.cshtml
@@ -20,7 +20,7 @@
                     <th class="title">Settings</th>
                 </tr>
             </thead>
-            <tr>
+            <tr class="tbodyfood">
                 <td>@Html.DisplayFor(model => model.FoodCategory.Name)</td>
 
                 <td>@Html.DisplayFor(model => model.FoodCategory.Description)</td>
