--- a/wwwroot/css/FoodandCategory/Create.css
+++ b/wwwroot/css/FoodandCategory/Create.css
@@ -8,22 +8,27 @@
 .menu {
     width: 100%;
     font-family: Open Sans;
-    color: #fb2e00;
-    border-radius: 10px;
+    color: yellow;
     text-align: center;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
-
 .menutext {
     font-size: 30px;
+    border-radius: 10px;
+    background-color: #fb2e00;
+    padding:10px;
 }
 
 .row {
-    background-color: #ffe8a4;
     display: flex;
-    margin-left: 400px;
-    margin-right: 400px;
     justify-content: center;
-    padding:10px;
+    padding: 10px;
+    margin-left: 200px;
+    margin-right: 200px;
+    border: 1px solid #fb2e00;
+    border-radius: 10px;
 }
 
 .btncrud {
