--- a/wwwroot/css/FoodandCategory/Delete.css
+++ b/wwwroot/css/FoodandCategory/Delete.css
@@ -18,10 +18,15 @@
 
 .theadtable {
     background-color: #fb2e00;
+    text-align: center;
 }
 
 .title {
     color: yellow;
+}
+
+.tbodyfood {
+    text-align: center;
 }
 
 .btncrud a {
