--- a/Pages/Authentication/ResetPasswordOTP.cshtml
+++ b/Pages/Authentication/ResetPasswordOTP.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model RestaurantManagement.Pages.Authentication.OTPModel
+@model RestaurantManagement.Pages.Authentication.ResetPasswordOTPModel
 @{
-} 
+}
 @{
     Layout = "_MyLayout";
 }
@@ -47,16 +47,14 @@
 </head>
 <body>
     <div class="login-form">
-        <h1>@HttpContext.Session.GetString("TITLE")</h1>
+        <h1>Reset password</h1>
         <form method="post">
             <div class="form-group">
-                <label for="Email">Enter OTP from email:</label>
-                <input type="text" class="form-control"  name="Otp" />
+                <label for="Email">Enter your email to reset password:</label>
+                <input type="text" class="form-control"  name="email" />
             </div> 
             <h3 style="color:red">@Model.message</h3>
             <button type="submit" class="btn btn-primary">Next</button>
         </form>
     </div>
 </body>
-
-
