--- a/Pages/Authentication/Login.cshtml
+++ b/Pages/Authentication/Login.cshtml
@@ -30,10 +30,11 @@
             </div>
             <h1 style="color:red">@Model.message</h1>
 
-            <button href=""  class="btn btn-primary">Reset Password</button>
+            
             <button type="submit" class="btn btn-primary">Login</button>
 
         </form>
+        <button  class="btn btn-primary"><a href="ResetPasswordOTP">Reset Password</a></button>
     </div>
     <div class="row contact">
         <div class="col-md-12 textfeedback d-flex justify-content-center text-danger">
