--- a/Pages/Authentication/Login.cshtml
+++ b/Pages/Authentication/Login.cshtml
@@ -30,8 +30,8 @@
             </div>
             <h1 style="color:red">@Model.message</h1>
 
-            <button href=""  class="btn btn-primary">Reset Password</button>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button href=""  class="btn">Reset Password</button>
+            <button type="submit" class="btn">Login</button>
 
         </form>
     </div>
